{
    "name": "PlayerControlls",
    "maps": [
        {
            "name": "Player",
            "id": "dab3969b-fbfc-41bc-b341-801f50d36445",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "58bb4aee-5489-4df2-8c4d-1055a7965c6d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "3a25b153-2b66-466a-8b6b-32ef75f6529d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "eb8f6d8e-f8dc-4fc0-a039-d90a23b4b622",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "99ede621-af2e-43fa-bc70-f6790e4ccaf7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "00a01b46-1bc8-4f85-a1db-a9203ffbd9cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickUp",
                    "type": "Value",
                    "id": "7034aa90-8591-409e-b003-34ab9cc1c725",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ThrowObject",
                    "type": "Button",
                    "id": "6d68161f-5004-482a-b48d-3192531b2171",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PumpPower",
                    "type": "Value",
                    "id": "eb0af924-cb23-4b11-9678-fa4246d35524",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "ac8e11c1-6a19-4f02-9bd2-2d4958cfb18a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "44ac0aab-5ea4-404f-8055-b52e62e068bc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f84f71c5-74a9-463e-8227-ee58c078c694",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "96f0a41c-1b85-4849-ac60-01bf6df7f4d7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a564091e-c1e0-4c6a-bb58-2b7cb13f7804",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "098f615d-78c9-43a8-aa57-5155f4dc9063",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df290331-3d14-44d7-a4af-908bb509e9fe",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ed9fd29-3d56-4a85-8efc-3aaeedd4d0b2",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54ec0aa2-e2d3-451c-b2bc-64e9eec4fa6c",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89bfea54-8f7d-45d1-a1d3-fdf16ae0636d",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92616266-a5d2-4a1f-bf54-eaeb4064e681",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ThrowObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cca09cb-8aa7-4e56-a90d-ce730e312e23",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "PumpPower",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2",
            "id": "467872f1-b850-43b4-bfdc-eeca42db50c4",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "410065bb-2f0d-42ed-9c0d-f72d39c02199",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "255720b8-fb4a-467b-8664-ca98e68c51cf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "a28c8b94-de09-490e-b205-df8eb67cf6f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "f4198795-ddba-4eaa-b301-a7af5fe30178",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "627008ca-32ef-49cb-bd4e-a00861c0aacd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickUp",
                    "type": "Value",
                    "id": "ae9002f8-60ad-427c-864e-974feb2fddf7",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ThrowObject",
                    "type": "Button",
                    "id": "5e9fd6df-95e4-4cdc-8497-12d7f5f76b42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PumpPower",
                    "type": "Value",
                    "id": "4f3465a3-0079-4207-9fd2-a7939b474a35",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Left Stick",
                    "id": "05c90083-4491-4cf6-9134-15b0d636baee",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "69f437cd-a12f-423d-b699-8330a8c4a247",
                    "path": "<XInputController>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b610668b-e3e9-45a1-951c-743ff296350e",
                    "path": "<XInputController>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0f6317d8-fc3f-4652-929e-71f8ab5bba8d",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8bed9cc3-45ea-43ec-afb6-3a2c429d608d",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7840a797-4c31-424b-a2ac-e5a44184cbcf",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4cde374-d349-4a01-85d2-7f5ce957e965",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a949ac68-df09-40d0-a6e8-7c4b0783ea52",
                    "path": "<XInputController>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21afad97-fb75-461b-8153-240f5c391a02",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e92d16a-e536-4dac-b537-22749d837a31",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "ThrowObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00ced67f-d940-4a53-bef4-cb6560ea90b4",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "PumpPower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41b59737-2fd5-4a5b-9ff9-4bf1c4326b31",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}